errors_102024-135122.log
../mm/cma.c:80:22: error: redefinition of ‘cma_bitmap_maxno’
 static unsigned long cma_bitmap_maxno(struct cma *cma)
                      ^
In file included from ../mm/cma.c:42:0:
../mm/cma.h:19:22: note: previous definition of ‘cma_bitmap_maxno’ was here
 static unsigned long cma_bitmap_maxno(struct cma *cma)
                      ^
../mm/cma.h:19:22: error: ‘cma_bitmap_maxno’ defined but not used [-Werror=unused-function]
../mm/cma.c:70:22: error: ‘cma_bitmap_aligned_offset’ defined but not used [-Werror=unused-function]
 static unsigned long cma_bitmap_aligned_offset(const struct cma *cma,
                      ^
cc1: all warnings being treated as errors
make[2]: *** [../scripts/Makefile.build:257: mm/cma.o] Error 1
make[2]: *** Waiting for unfinished jobs....
make[1]: *** [/home/rebel/Android/android_kernel_motorola_msm8937/Makefile:949: mm] Error 2
make[1]: *** Waiting for unfinished jobs....
make: *** [Makefile:145: sub-make] Error 2
